# aero-handler

./: .flake8  .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: latest.json
scripts/: dev_check.py
src/: aircraft.py  base_api.py  base_storage.py  json_storage.py  opensky_api.py  user_interface.py
tests/: test_abstract_contracts.py  test_aircraft.py  test_json_storage.py  test_opensky_api.py  test_user_interface.py  test_user_menu.py
