[tool.poetry]
name = "aero-handler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.33.1"


[tool.black]
line-length = 88
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".pytest_cache", ".venv", "venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
